fixes an editor overlaps which have a long help text

--- a/styles/widgets/base/treeList.less
+++ b/styles/widgets/base/treeList.less
@@ -73,6 +73,10 @@
     .dx-treelist-rowsview {
         .dx-treelist-edit-form {
             background-color: @treelist-base-background-color;
+
+            .dx-field-item-help-text {
+                white-space: normal;
+            }
         }
     }
 
